# ferrum

./: .gitignore  Cargo.toml  README.md  demo.py  pyproject.toml
design/: architecture.md  ideas.md
ferrum/: Cargo.toml
ferrum-macros/: Cargo.toml
ferrum-macros/src/: lib.rs
ferrum/examples/: attribute_task.rs  simple_task.rs
ferrum/src/: lib.rs  train.rs
ferrum/src/actor/: mod.rs
ferrum/src/control/: errors.rs  mod.rs  traits.rs
ferrum/src/core/: agent.rs  env.rs  mod.rs  trainer.rs
ferrum/src/env/: errors.rs  mod.rs  traits.rs  types.rs  vec_env.rs
ferrum/src/inference/: engine.rs  errors.rs  mod.rs  traits.rs
ferrum/src/inference_old/: client.rs  engine.rs  types.rs
ferrum/src/learner/: errors.rs  mod.rs  traits.rs
ferrum/src/runtime/: codec.rs  error.rs  global.rs  handle.rs  mod.rs  result_source.rs  scheduler.rs  service.rs  task.rs
ferrum/src/types/: mod.rs
src/: lib.rs
src/inference/: client.rs  engine.rs  mod.rs  types.rs
src/runtime/: macros.rs
