[package]
name = "ferrum"
version = "0.1.0"
edition = "2024"

[lib]
name = "ferrum"
# "cdylib" creates a shared library that Python can import
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"  # Better error types
tracing = "0.1"    # Logging/observability