[workspace]
members = ["ferrum"]
resolver = "2"

# Workspace-level dependencies (optional but helpful)
[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"