[build-system]
requires = ["maturin>=1.9.3"]
build-backend = "maturin"

[project]
name = "ferrum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "maturin>=1.9.3",
    "ruff>=0.12.7",
]

[tool.maturin]
features = ["pyo3/extension-module"]
